--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -1,5 +1,8 @@
-<h5>Equipo Real-Time</h5>
-<div class="row row-cols-1 row-cols-md-3 g-4">
+<br>
+<div class="card">
+  <div class="card-body">
+    <h5>Equipo Real-Time</h5>
+<div class="row row-cols-1 row-cols-md-3 g-4" id="productList">
   {{#if equipos.length}}
         {{#each equipos}}
               <div class="col">
@@ -8,8 +11,10 @@
                   <div class="card-body">
                     <h5 class="card-title">{{title}} - ({{category}})</h5>
                     <p class="card-text">
+                      Código: {{code}}<br>
                       Descripción: {{description}}<br>
                       Precio: ${{price}}<br>
+                      Estado: {{#if status}}Disponible{{else}}Agotado{{/if}}<br>
                       Stock: {{stock}} unidades<br>
                     </p>
                   </div>
@@ -18,34 +23,43 @@
         {{/each}}
   {{else}}
   <p>No hay equipos disponibles.</p>
-  {{/if}}     
+  {{/if}}
+
+
+
 </div>
+  </div>
+</div>
+
+
 <!-- Formulario para agregar productos-->
-<div class="mt-4">
-  <h5>Agregar Nuevo Producto</h5>
-  <form id="addProductForm" class="row">
+<div id="productList"></div><br>
+<div class="card">
+  <h5 class="card-header">Registro de Equipo</h5>
+  <div class="card-body">
+   <form id="addProductForm" class="row">
     <div class="mb-3 col-md-6">
-      <label for="title" class="form-label">Título:</label>
+      <label class="form-label">Título:</label>
       <input type="text" class="form-control" name="title" required>
     </div>
 
     <div class="mb-3 col-md-6">
-      <label for="description" class="form-label">Descripción:</label>
+      <label  class="form-label">Descripción:</label>
       <textarea class="form-control" name="description" required></textarea>
     </div>
 
     <div class="mb-3 col-md-6">
-      <label for="code" class="form-label">Código:</label>
+      <label  class="form-label">Código:</label>
       <input type="text" class="form-control" name="code" required>
     </div>
 
     <div class="mb-3 col-md-6">
-      <label for="price" class="form-label">Precio:</label>
+      <label  class="form-label">Precio:</label>
      <input type="number" class="form-control" name="price" required>
     </div>
 
     <div class="mb-3 col-md-6">
-    <label for="status" class="form-label">Estado:</label>
+    <label  class="form-label">Estado:</label>
     <select class="form-select" aria-label="Select status" name="status">
       <option value="true">Disponible</option>
       <option value="false">Agotado</option> 
@@ -53,23 +67,24 @@
     </div>
 
     <div class="mb-3 col-md-6">
-      <label for="stock" class="form-label">Stock:</label>
+      <label  class="form-label">Stock:</label>
       <input type="number" class="form-control" name="stock" required>
     </div>
 
     <div class="mb-3 col-md-6">
-      <label for="category" class="form-label">Categoría:</label>
+      <label  class="form-label">Categoría:</label>
       <input type="text" class="form-control" name="category" required>
     </div>
 
     <div class="mb-3 col-md-6">
-      <label for="thumbnails" class="form-label">URL Imagen:</label>
-      <input type="text" class="form-control" name="thumbnails" required>
+      <label  class="form-label">URL Imagen:</label>
+      <input type="text" class="form-control" name="thumbnail" value="img/equipo3.jpg">
     </div>
 
     <button type="button" class="btn btn-primary" onclick="submitAddProductFormViaSocket()">Agregar Producto</button>
-
-  </form>
+  </form>  
+  </div>
 </div>
+
 <script src="/socket.io/socket.io.js"></script>
 <script src="/js/products.js"></script>
