--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -23,7 +23,7 @@
           <a class="nav-link active" aria-current="page" href="/productcatalog">Catalogo de Equipos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/carts">Lista de Compras</a>
+          <a class="nav-link active" aria-current="page" href="/listcarts/view">Lista de Compras</a>
         </li>
       </ul>
          <a href="#" class="btn btn-primary" id="micarrito">
