--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -26,9 +26,9 @@
           <a class="nav-link active" aria-current="page" href="/listcarts/view">Lista de Compras</a>
         </li>
       </ul>
-         <a href="#" class="btn btn-primary" id="micarrito">
+         <a href="#" class="btn btn-primary d-none" id="micarrito">
           <i class="bi bi-cart3" ></i>Mi Carrito
-          <span class="badge text-bg-danger" id="contadorCarrito">0</span>
+          <span class="badge text-bg-danger" id="contadorCarrito" >0</span>
         </a>
     </div>
   </div>
