--- a/src/views/carts.handlebars
+++ b/src/views/carts.handlebars
@@ -31,7 +31,7 @@
       </div>
     </div>
     <div class="row row-cols-1 row-cols-md-3 g-4">
-              {{#each cartsData}}
+              {{#each carts}}
                   <div class="col">
                       <div class="card">
                           <div class="card-body">
@@ -39,11 +39,134 @@
                             <p class="card-text">
                               Nombre: {{this.nombre}}<br>
                               Dirección: {{this.direccion}}<br>
-                              Total: {{this.direccion}}<br>
+                              Total: {{this.totalPrice}}<br>
                             </p>
-                            <button type="button" class="btn btn-warning btn-sm btn-comprar"> <i class="bi bi-cart" data-id="{{this.productIds}}" id="detalle"></i>Ver Detalle</button>
+                            <button type="button" class="btn btn-warning btn-sm btn-ver"> <i class="bi bi-search" data-id="{{this._id}}" id="detalle"></i>Ver Detalle</button>
+                            <button type="button" class="btn btn-danger btn-sm" data-bs-toggle="modal" data-bs-target="#deleteModal" data-id="{{this._id}}" onclick="setCartIdToDelete(this.getAttribute('data-id'))">
+                          <i class="bi bi-trash"></i>
+                        </button>
                           </div>
                       </div>
                   </div>
               {{/each}} 
           </div>
+            <nav aria-label="Page navigation">
+                    <ul class="pagination justify-content-center">
+                      {{#if hasPrevPage}}
+                        <li class="page-item">
+                          <a class="page-link" href="{{prevLink}}" aria-label="Previous">
+                            <span aria-hidden="true">&laquo; Atras</span>
+                          </a>
+                        </li>
+                      {{else}}
+                        <li class="page-item disabled">
+                          <span class="page-link">&laquo; Atras</span>
+                        </li>
+                      {{/if}}
+                      {{#each pages}}
+                        <li class="page-item{{#if this.isCurrent}} active{{/if}}">
+                          <a class="page-link" href="{{this.url}}">{{this.number}}</a>
+                        </li>
+                      {{/each}}
+                      {{#if hasNextPage}}
+                        <li class="page-item">
+                          <a class="page-link" href="{{nextLink}}" aria-label="Next">
+                            <span aria-hidden="true">Siguiente &raquo;</span>
+                          </a>
+                        </li>
+                      {{else}}
+                        <li class="page-item disabled">
+                          <span class="page-link">Siguiente &raquo;</span>
+                        </li>
+                      {{/if}}
+                    </ul>
+                </nav>
+            </div>
+<div class="modal fade" id="cartDetailsModal" tabindex="-1" aria-labelledby="cartDetailsModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="cartDetailsModalLabel">Detalles del Carrito</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <div class="mb-4">
+          
+          <div class="row">
+            <div class="col-md-6 mb-3">
+              <strong>Cliente:</strong> <span id="cartName"></span>
+            </div>
+            <div class="col-md-6 mb-3">
+              <strong>Dirección:</strong> <span id="direccion"></span>
+            </div>
+          </div>
+        </div>
+        <h6 class="border-bottom pb-2 mb-3">Detalle Carrito</h6>
+        <table class="table table-striped">
+          <thead>
+            <tr>
+              <th scope="col">Equipo</th>
+              <th scope="col">Cantidad</th>
+            </tr>
+          </thead>
+          <tbody id="cartDetailsTableBody">
+          
+          </tbody>
+        </table>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="deleteModalLabel">Eliminar Equipo</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <p>¿Estás seguro de que deseas eliminar este Carrtio?</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+        <button type="button" class="btn btn-danger" onclick="deletedeletecart()">Eliminar</button>
+      </div>
+    </div>
+  </div>
+</div>
+<script>
+  let CartId;
+function setCartIdToDelete(id) {
+CartId = id;
+}
+function deletedeletecart() {
+    if (CartId) {
+    fetch('/listcarts/carts/' + CartId, {
+    method: 'DELETE'
+    })
+    .then(response => response.json())
+    .then(data => {
+    console.log(data)
+    $('#deleteModal').modal('hide');
+    window.location.href = '/listcarts/view';
+    Swal.fire({
+    toast: true,
+    icon: 'info',
+    title: 'Carrito Eliminado',
+    animation: false,
+    position: 'top-end',
+    showConfirmButton: false,
+    timer: 700000,
+    timerProgressBar: true,
+    })
+     
+    })
+    .catch(error => console.error('Error:', error));
+    }
+}
+</script>
+<script src="/js/filtrocart.js"></script>
+<script src="/js/details.js"></script>
