--- a/src/views/productcatalog.handlebars
+++ b/src/views/productcatalog.handlebars
@@ -45,55 +45,55 @@
           {{#each products}}
               <div class="col">
                   <div class="card">
-                    <img src="{{this.thumbnail}}" alt="Imagen de equipo" style="width: 15%; height: auto;">
+                    <img src="{{thumbnail}}" alt="Imagen de equipo" style="width: 15%; height: auto;">
                       <div class="card-body">
-                        <h5 class="card-title">{{this.title}} - ({{this.category}})</h5>
+                        <h5 class="card-title">{{title}} - ({{category}})</h5>
                         <p class="card-text">
-                          Código: {{this.code}}<br>
-                          Descripción: {{this.description}}<br>
-                          Precio: ${{this.price}}<br>
-                          Estado: {{#if this.status}}Disponible{{else}}Agotado{{/if}}<br>
-                          Stock: {{this.stock}} unidades<br>
+                          Código: {{code}}<br>
+                          Descripción: {{description}}<br>
+                          Precio: ${{price}}<br>
+                          Estado: {{#if status}}Disponible{{else}}Agotado{{/if}}<br>
+                          Stock: {{stock}} unidades<br>
                         </p>
-                        <button type="button" class="btn btn-warning btn-sm btn-comprar"> <i class="bi bi-cart" data-id="{{this._id}}" id="comprar"></i>Comprar</button>
+                        <button type="button" class="btn btn-warning btn-sm btn-comprar"> <i class="bi bi-cart" data-id="{{id}}" id="comprar"></i>Comprar</button>
                       </div>
                   </div>
               </div>
           {{/each}} 
       </div>
-    <nav aria-label="Page navigation">
-        <ul class="pagination justify-content-center">
-          {{#if hasPrevPage}}
-            <li class="page-item">
-              <a class="page-link" href="{{prevLink}}" aria-label="Previous">
-                <span aria-hidden="true">&laquo; Atras</span>
-              </a>
-            </li>
-          {{else}}
-            <li class="page-item disabled">
-              <span class="page-link">&laquo; Atras</span>
-            </li>
-          {{/if}}
-          {{#each pages}}
-            <li class="page-item{{#if this.isCurrent}} active{{/if}}">
-              <a class="page-link" href="{{this.url}}">{{this.number}}</a>
-            </li>
-          {{/each}}
-          {{#if hasNextPage}}
-            <li class="page-item">
-              <a class="page-link" href="{{nextLink}}" aria-label="Next">
-                <span aria-hidden="true">Siguiente &raquo;</span>
-              </a>
-            </li>
-          {{else}}
-            <li class="page-item disabled">
-              <span class="page-link">Siguiente &raquo;</span>
-            </li>
-          {{/if}}
-        </ul>
-     </nav>
-  </div>
-</div>
+   <nav aria-label="Pagination">
+  <ul class="pagination justify-content-center">
+
+    {{#if pagination.hasPrevPage}}
+      <li class="page-item">
+        <a class="page-link" href="/productcatalog?page={{pagination.prevPage}}" aria-label="Anterior">
+          Anterior
+        </a>
+      </li>
+    {{else}}
+      <li class="page-item disabled">
+        <span class="page-link" aria-hidden="true">Anterior</span>
+      </li>
+    {{/if}}
+
+    <li class="page-item disabled">
+      <span class="page-link">{{pagination.page}}</span>
+    </li>
+
+    {{#if pagination.hasNextPage}}
+      <li class="page-item">
+        <a class="page-link" href="/productcatalog?page={{pagination.nextPage}}" aria-label="Siguiente">
+          Siguiente
+        </a>
+      </li>
+    {{else}}
+      <li class="page-item disabled">
+        <span class="page-link" aria-hidden="true">Siguiente</span>
+      </li>
+    {{/if}}
+
+  </ul>
+</nav>
 
 <div class="modal fade" id="modalDetalleCarrito" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-lg">
