--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,33 +1,35 @@
-<br>
-<div class="card">
-  <div class="card-header">
-    Lista de equipos
-  </div>
-  <div class="card-body">
-    <div class="row row-cols-1 row-cols-md-3 g-4">
-    {{#if equipos.length}}
-        {{#each equipos}}
-              <div class="col">
-                <div class="card">
-                  <img src="{{thumbnail}}" alt="Imagene de equipo" style="width: 10%; height: auto;">
-                  <div class="card-body">
-                    <h5 class="card-title">{{title}} - ({{category}})</h5>
-                    <p class="card-text">
-                      Código: {{code}}<br>
-                      Descripción: {{description}}<br>
-                      Precio: ${{price}}<br>
-                      Estado: {{#if status}}Disponible{{else}}Agotado{{/if}}<br>
-                      Stock: {{stock}} unidades<br>
-                    </p>
-                  </div>
-                </div>
-              </div>
-        {{/each}}
-  {{else}}
-  <p>No hay equipos disponibles.</p>
-  {{/if}}   
-</div>
-  </div>
-</div>    
-</div>
+<div class="container mt-5">
+    <h6 class="text-center mb-4">Nuestros Productos</h6>
 
+    <div class="row">
+        <div class="col-md-4 mb-4">
+            <div class="card h-100 shadow-sm">
+                <img src="../img/equipo1.jpg" class="card-img-top" alt="Laptop de Última Generación">
+                <div class="card-body d-flex flex-column">
+                    <h6 class="card-title">Laptop de Última Generación</h6>
+                    <p class="card-text flex-grow-1">Potencia y rendimiento en un solo dispositivo.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-4 mb-4">
+            <div class="card h-100 shadow-sm">
+                <img src="../img/equipo2.jpg" class="card-img-top" alt="PC de Escritorio Gamer">
+                <div class="card-body d-flex flex-column">
+                    <h6 class="card-title">PC de Escritorio Gamer</h6>
+                    <p class="card-text flex-grow-1">Experimenta juegos de alta calidad con nuestro equipo gamer.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-4 mb-4">
+            <div class="card h-100 shadow-sm">
+                <img src="../img/equipo6.jpg" class="card-img-top" alt="Accesorios Esenciales">
+                <div class="card-body d-flex flex-column">
+                    <h6 class="card-title">Accesorios Esenciales</h6>
+                    <p class="card-text flex-grow-1">Encuentra los accesorios perfectos para complementar tu equipo.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
