--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -8,7 +8,7 @@
     <title>WJ Servicios</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-success" data-bs-theme="dark">
+<nav class="navbar navbar-expand-lg bg-success" data-bs-theme="dark">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">WJ Servicios</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,16 +26,35 @@
           <a class="nav-link active" aria-current="page" href="/listcarts/view">Lista de Compras</a>
         </li>
       </ul>
-         <a href="#" class="btn btn-primary d-none" id="micarrito">
-          <i class="bi bi-cart3" ></i>Mi Carrito
-          <span class="badge text-bg-danger" id="contadorCarrito" >0</span>
-        </a>
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a href="#" class="btn btn-primary d-none" id="micarrito">
+            <i class="bi bi-cart3"></i>Mi Carrito
+            <span class="badge text-bg-danger" id="contadorCarrito">0</span>
+          </a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+           Bienvenido(a), {{user.first_name}} {{user.role}}
+          </a>
+          <ul class="dropdown-menu dropdown-menu-end bg-success" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item" href="/profile">Mostrar Perfil</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="auth/logout">Cerrar Sesión</a></li>
+          </ul>
+        </li>
+      </ul>
     </div>
   </div>
-</nav>  
+</nav>
+
+
     <div class="container">
     {{{body}}} 
     </div> 
+
+
+</script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" 
 integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
