--- a/src/views/forgot-Password.handlebars
+++ b/src/views/forgot-Password.handlebars
@@ -8,41 +8,30 @@
     <title>WJ Servicios</title>
 </head>
 <body>
-  <div class="container mt-5">
+   <div class="container mt-5">
   <div class="row justify-content-center">
     <div class="col-md-6">
       <div class="card">
         <div class="card-header">
-          <h6 class="text-center">Inicio de Sesión</h6>
+          <h6 class="text-center">Recuperar Contraseña</h6>
         </div>
         <div class="card-body">
-          <form action="/login" id="loginForm">
+          <form action="" id="forgotPassword">
+          
             <div class="form-group mb-3">
               <label for="email">Email:</label>
               <input type="email" class="form-control" id="email" name="email" required>
             </div>
+
             <div class="form-group mb-3">
               <label for="password">Contraseña:</label>
               <input type="password" class="form-control" id="password" name="password" required>
             </div>
-            <div class="form-group mb-3 text-end">
-              <a href="forgotPassword" class="forgot-password-link">¿Olvidaste tu contraseña?</a>
-            </div>
+
             <div class="d-grid gap-2">
-              <button type="submit" class="btn btn-success btn-block">Inicia sesión</button>
+              <button type="submit" class="btn btn-success btn-block">Restaurar Clave</button>
             </div>
           </form>
-          <div class="d-grid gap-2">
-                        <div style="margin-top: 10px;"></div>
-                    </div>
-          <div class="d-grid gap-2">
-                        <a href="/auth/github" class="btn btn-dark btn-block">
-                            <i class="bi bi-github"></i> Inicia sesión con GitHub
-                        </a>
-                    </div>
-          <div class="text-center mt-3">
-            <p>¿No tienes una cuenta? <a href="/signup">Registrarse</a></p>
-          </div>
         </div>
       </div>
     </div>
@@ -52,6 +41,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" 
 integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-<script src="/js/login.js"></script>
+<script src="/js/forgotPassword.js"></script>
 </body>
 </html>
