--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -35,7 +35,8 @@
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-             <input type="text" class="form-control" id="iduser" value="{{user.id}}" hidden>
+             <input type="text" class="form-control" id="iduser" value="{{user.id}}">
+             
            Bienvenido(a), {{user.first_name}} {{user.role}}
           </a>
           <ul class="dropdown-menu dropdown-menu-end bg-success" aria-labelledby="navbarDropdown">
@@ -60,5 +61,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" 
 integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
 </body>
 </html>
