--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -35,7 +35,7 @@
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-             <input type="text" class="form-control" id="iduser" value="{{user.id}}">
+             <input type="text" class="form-control" id="iduser" value="{{user.id}}" hidden>
              
            Bienvenido(a), {{user.first_name}} {{user.role}}
           </a>
