--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -40,6 +40,10 @@
            Bienvenido(a), {{user.first_name}} {{user.role}}
           </a>
           <ul class="dropdown-menu dropdown-menu-end bg-success" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item" href="/users">Lista Usuario - Sistema</a></li>
+            <li><hr class="dropdown-divider"></li>
+             <li><a class="dropdown-item" href="/send-email">Resetear Clave</a></li>
+              <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="/profile">Mostrar Perfil</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="auth/logout">Cerrar Sesión</a></li>
