--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -156,7 +156,12 @@
             <label for="description" class="col-form-label">Descripción Equipo:</label>
             <textarea class="form-control" id="description" name="description"></textarea>
           </div>
-
+          
+          <div class="mb-6 form-check">
+          <input type="checkbox" class="form-check-input" id="propietario" name="propietario">
+          <label class="form-check-label" for="propietario">¿Eres el propietario?</label>
+          </div>
+          <br>
           <div class="modal-footer">
             <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cerrar</button>
             <button type="submit" class="btn btn-info" id="guardarequipo">Guardar</button>
