--- a/src/views/reset-password.handlebars
+++ b/src/views/reset-password.handlebars
@@ -40,16 +40,15 @@ integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cD
 
     resetPasswordForm.addEventListener('submit', async function (event) {
         event.preventDefault();
-
         const newPassword = document.getElementById('newPassword').value;
-
+        const token = getTokenFromURL();
         try {
             const response = await fetch('/reset-password', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
                 },
-                body: JSON.stringify({ newPassword })
+                body: JSON.stringify({token, newPassword })
             });
 
             if (response.ok) {
@@ -77,7 +76,10 @@ integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cD
         }
     });
 });
-
+function getTokenFromURL() {
+    const urlParams = new URLSearchParams(window.location.search);
+    return urlParams.get('token');
+}
 </script>
 </body>
 </html>
