--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -236,6 +236,12 @@
               <label for="editDescription" class="form-label">Descripción:</label>
               <textarea class="form-control" id="editDescription" name="description" required></textarea>
             </div>
+            <div class="mb-6 form-check">
+                <input type="checkbox" id="editpropietario" class="form-check-input" name="editpropietario">
+                <label for="editpropietario" class="form-check-label">¿Eres el propietario?</label>
+            </div>
+
+          <br>
         </form>
       </div>
       <div class="modal-footer">
@@ -247,7 +253,6 @@
 </div>
 
 <br>
-
 <script src="/socket.io/socket.io.js"></script>
 <script src="/js/products.js"></script>  
 
