--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -26,7 +26,7 @@
               <input type="password" class="form-control" id="password" name="password" required>
             </div>
             <div class="form-group mb-3 text-end">
-              <a href="forgotPassword" class="forgot-password-link">¿Olvidaste tu contraseña?</a>
+              <a href="send-email" class="forgot-password-link">¿Olvidaste tu contraseña?</a>
             </div>
             <div class="d-grid gap-2">
               <button type="submit" class="btn btn-success btn-block">Inicia sesión</button>
@@ -48,6 +48,7 @@
     </div>
   </div>
 </div>
+
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" 
 integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
