--- a/src/views/send-email.handlebars
+++ b/src/views/send-email.handlebars
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css">
+    <title>WJ Servicios</title>
+</head>
+<body>
 <div class="container mt-5">
     <div class="row justify-content-center">
         <div class="col-md-6">
@@ -11,13 +21,17 @@
                             <label for="email" class="form-label">Correo Electrónico:</label>
                             <input type="email" class="form-control" id="email" name="email" required>
                         </div>
-                        <button type="submit" class="btn btn-primary">Enviar</button>
+                        <button type="submit" class="btn btn-success"><i class="bi bi-envelope"></i> Enviar</button>
                     </form>
                 </div>
             </div>
         </div>
     </div>
 </div>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" 
+integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script>
     document.addEventListener('DOMContentLoaded', function () {
     const resetPasswordForm = document.getElementById('resetPasswordForm');
@@ -42,7 +56,7 @@
                     title: 'Correo enviado',
                     text: 'Se ha enviado un correo electrónico para restablecer la contraseña.'
                 });
-                window.location.href = '/home'; 
+                window.location.href = '/login'; 
             } else {
                 const errorData = await response.json();
                 await Swal.fire({
@@ -63,3 +77,5 @@
 });
 
 </script>
+</body>
+</html>
